# blazel-task

./: .gitignore  ANALYSIS_PLAN.md  README.md  convert_all_notebooks_to_static.py  data_summary.txt  pyproject.toml  requirements.txt
notebooks/: 01_data_cleaning.ipynb  02_exploratory_analysis.ipynb  03_engagement_analysis.ipynb  04_content_analysis copy 3.ipynb  04_content_analysis copy.ipynb  04_content_analysis.ipynb  07_final_report copy 2.ipynb  07_final_report copy 3.ipynb  07_final_report copy 4.ipynb  07_final_report copy 5.ipynb  07_final_report copy 6.ipynb  07_final_report copy.ipynb  07_final_report.html  07_final_report.ipynb  07_final_report_backup.ipynb
output/tables/: content_type_length_interaction.csv  content_type_statistical_tests.csv  correlation_matrix.csv  data_quality_report.csv  engagement_by_content_category_sample.csv  engagement_by_content_type.csv  engagement_by_cta_posts.csv  engagement_by_emoji_count.csv  engagement_by_follower_tier.csv  engagement_by_hashtag_count.csv  engagement_by_length_bins.csv  engagement_by_length_category.csv  engagement_by_mention_count.csv  engagement_by_mention_type.csv  engagement_by_question_posts.csv  engagement_by_readability.csv  engagement_by_sentiment.csv  engagement_by_structure.csv  engagement_by_time_of_day.csv  engagement_by_url_category.csv  engagement_by_url_count.csv  engagement_by_url_host.csv  engagement_by_writing_style.csv  engagement_ratios_by_content_type.csv  engagement_statistics.csv  feature_importance_regression.csv  hashtag_usage_by_content_type.csv  (+18 more)
src/: data_loader.py
