[project]
name = "blazel-task"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "ipywidgets>=8.1.0",
    "jupyter>=1.0.0",
    "jupyterlab>=4.0.0",
    "kaleido>=0.2.1",
    "nbconvert>=7.0.0",
    "nltk>=3.8.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "plotly>=5.18.0",
    "python-dateutil>=2.8.0",
    "pytz>=2023.3",
    "scikit-learn>=1.3.0",
    "scipy>=1.10.0",
    "statsmodels>=0.14.0",
    "textblob>=0.17.0",
    "textstat>=0.7.3",
    "tqdm>=4.66.0",
    "wordcloud>=1.9.0",
    "ydata-profiling>=4.5.0",
]
